syntax = "proto3";

package api.v1;

import "google/protobuf/empty.proto";
import "core/pkg/service/rack/pb/rack.proto";

option go_package = "github.com/synnaxlabs/synnax/pkg/api/grpc/v1";

service RackCreateService {
  rpc Exec(RackCreateRequest) returns (RackCreateResponse);
}

service RackRetrieveService {
  rpc Exec(RackRetrieveRequest) returns (RackRetrieveResponse);
}

service RackDeleteService {
  rpc Exec(RackDeleteRequest) returns (google.protobuf.Empty);
}

message RackCreateRequest {
  repeated service.rack.Rack racks = 1;
}

message RackCreateResponse {
  repeated service.rack.Rack racks = 1;
}

message RackRetrieveRequest {
  repeated uint32 keys = 1;
  repeated string names = 2;
}

message RackRetrieveResponse {
  repeated service.rack.Rack racks = 1;
}

message RackDeleteRequest {
  repeated uint32 keys = 1;
}
